# Viseme_model

./: .gitignore  README.md  pyproject.toml  setup.cfg  test.py
src/conformer_ppg/: __init__.py  encoder.py  frontend.py  model.py  normalize.py
src/conformer_ppg/static/: ppg-model.yml  ppg-phn-model.yml
src/layer/: __init__.py  attention.py  bilstm.py  convolution.py  embedding.py  encoder_layer.py  multi_layer_conv.py  positionwise_feed_forward.py  repeat.py  subsampling.py  utils.py  vgg.py
src/viseme_lipsync/: librispeech_phoneme.txt  model.py  util.py
