[metadata]
name = nface-atl
version = 1.5.3
description = NFace-ATL is a library for the NFace training framework.
long_description = file: README.md
keywords = nface, atl, audio, landmark, framework
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
packages = find:
package_dir =
     = src
include_package_data = True
python_requires = >=3.11
install_requires =
    attrs>=23.1.0
    cattrs>=23.1.0
    numpy>=1.23.3
    pandas>=1.5.0
    tqdm>=4.64.1
    ruamel.yaml>=0.17.21
    librosa>=0.9.2
    matplotlib>=3.5.2
    # torch
    torch>=1.12.0
    torchvision>=0.13.0
    torchaudio>=0.12.0
    pytorch-lightning>=1.8.1
    tensorboard>=2.9.1
    # nface subsystem requires NCSOFT index as follow:
    # --extra-index-url https://repo.ncsoft.net/artifactory/api/pypi/pypi-prod/simple
    nface-animation>=0.2.0
    nface-annotation>=0.4.2
    nface-dataset>=0.7.1
    nface-landmark>=0.3.3
    nface-metrics>=0.1.0

[options.extras_require]
inference =
    praat-parselmouth>=0.4.3
    transformers>=4.29.2
    nface-render>=0.2.1
    nface-io>=1.2.0
    nface-control>=0.7.0
serve-base =
    httpx>=0.25.0
    fastapi>=0.103.1
    uvicorn>=0.23.2
    pydantic-settings>=2.0.3
    python-multipart>=0.0.5
    orjson>=3.9.7
serve-emotive-verbal =
    vf-rig-blender>=0.2.8
serve-non-verbal =
    vf-motion-matching>=0.3.21
serve-retargeter =
    # ncgraphicsai subsystem requires NCSOFT index as follow:
    # --extra-index-url https://repo.ncsoft.net/artifactory/api/pypi/graphicsai-pypi-local/simple
    ncgraphicsai-archiveio>=0.2.1.post1
    ncgraphicsai-artkit-face-retargeter==2023.11.0a4
serve =
    nface-atl[inference]
    nface-atl[serve-base]
    nface-atl[serve-emotive-verbal]
    nface-atl[serve-non-verbal]
    nface-atl[serve-retargeter]
dev =
    nface-atl[inference]
    isort
    black
    flake8
    pylint
    pyright
    pre-commit
test =
    tox
    pytest>=7.0.0
    pytest-cov
    pytest-asyncio
    pytest-benchmark

[options.packages.find]
where = src

[options.package_data]
config_static = nface/atl/conf/*/*.yml
module_static = nface/atl/model/module/*/static/*
default_static = nface/atl/static/*/*